samples/_failures_safe/1761721909_21a7a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63c84603.c: In function ‘main’:
./samples/SAFE/__tmp_63c84603.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
